"Fixed" Scrolling issue on mobile & updated meta

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -5,8 +5,8 @@
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
-    height: 75vh;
-    overflow: auto;
+    height: 100%;
+    overflow: hidden;
 }
 .top-row{
     display: flex;
